--- a/app/blocks/common.blocks/simple-slider/simple-slider.scss
+++ b/app/blocks/common.blocks/simple-slider/simple-slider.scss
@@ -10,8 +10,8 @@ $font-size-description-info-mv: $base-font-size*1;
 $tran-duration-info: 1s;
 $tran-info-offset: 150px; //not %
 
-$bullet-size: 1.1em;
-$bullet-margin: .4em;
+$bullet-size: 1.1em; //1.1em
+$bullet-margin: .4em; //.4em
 $bullet-border-width: 2px;
 
 .simple-slider {
@@ -180,6 +180,8 @@ $bullet-border-width: 2px;
     &__bullets {
         display: flex;
         justify-content: center;
+        width: 80%;
+        margin: auto;
     }
 
     &__bullets-item {
