--- a/app/blocks/common.blocks/button-menu/button-menu.scss
+++ b/app/blocks/common.blocks/button-menu/button-menu.scss
@@ -83,5 +83,14 @@ $deltaWidth: $newWidth - $width;
         box-shadow: 0 0 1px 1px #{$colorHover};
     }
 
+    //------------------------------------------------------------------------------
+    //  themes
+    //------------------------------------------------------------------------------
+
+    &_theme-grey {
+        .button-menu__line {
+            background: $dark-gray;
+        }
+    }
 }
 
