--- a/app/SASS/_modules.scss
+++ b/app/SASS/_modules.scss
@@ -8,3 +8,4 @@
 @import "../blocks/common.blocks/simple-slider/simple-slider.scss";
 @import "../blocks/common.blocks/container-content/container-content.scss";
 @import "../blocks/common.blocks/text-block/text-block.scss";
+@import "../blocks/common.blocks/photo-block/photo-block.scss";
