--- a/app/blocks/common.blocks/text-block/text-block.scss
+++ b/app/blocks/common.blocks/text-block/text-block.scss
@@ -1,13 +1,22 @@
 .text-block {
     height: 100%;//temp
     background-color:  #bbb; //temp
-    @include col-row {
-        background-color:  #ddd;
-      };
 
+
+    
+//------------------------------------------------------------------------------
+//  mods
+//------------------------------------------------------------------------------
     &_half {
-        @include col($num-cal: 8);
+        width: 50%;
     }
 
+
+//------------------------------------------------------------------------------
+//  mobile
+//------------------------------------------------------------------------------
+    @include single-col {
+        background-color:  #ddd;
+      };
 }
 
