--- a/app/blocks/common.blocks/logotype/logotype.scss
+++ b/app/blocks/common.blocks/logotype/logotype.scss
@@ -12,6 +12,7 @@
     position: relative;
     white-space: nowrap;
     height: $logotype-height;
+    font-family: PT Sans, sans-serif;
 
     //------------------------------------------------------------------------------
     //  children
