--- a/app/blocks/common.blocks/page/page.scss
+++ b/app/blocks/common.blocks/page/page.scss
@@ -1,5 +1,6 @@
 .page {
-    font-family: 'PT Sans', sans-serif;
+    //font-family: 'PT Sans', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     height: 100%;
     background-size: cover;
     overflow: auto;
