--- a/app/SASS/_settings.scss
+++ b/app/SASS/_settings.scss
@@ -1,5 +1,8 @@
 //temp
 //@import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic,cyrillic-ext');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap&subset=cyrillic,cyrillic-ext');
+@import url('https://fonts.googleapis.com/css?family=Oswald:300,400&display=swap&subset=cyrillic');
+
 @font-face {
     font-family: PT Sans; 
     src: url(/fonts/PT_Sans-Web-Regular.ttf); 
