--- a/app/blocks/common.blocks/text-block/text-block.scss
+++ b/app/blocks/common.blocks/text-block/text-block.scss
@@ -12,13 +12,12 @@
         color: $dark-gray;
         font-size: $base-font-size*1.6;
         text-align: center;
-        margin: $gutter-vertical;
+        margin-bottom: $gutter-vertical;
     }
     &__title {
         color: $pink-text;
         font-size: $base-font-size*1.5;
         text-align: center;
-        //font-weight: bold;
         margin: $gutter-vertical;
     }
     &__text {
@@ -26,27 +25,33 @@
         font-size: $base-font-size;
         text-align: center;
         margin: $gutter-vertical*1.1;
-        //font-weight: bold;
         line-height: 1.6em;
     }
 
     &__list {
-        margin: $gutter-vertical*1.3;///?????
-        
+        margin: $gutter-vertical*1.3;
+        text-align: center;
     }
 
     &__list-item {
         color: $dark-gray;
         font-size: $base-font-size;
         margin: $gutter-vertical*0.4;
-        padding-left: 1.8em;
-        //text-align: center;
+        text-align: center;
         list-style-type: none;
-        position: relative;
-        display: inline-block;
-        background: url("pink-heart.png") no-repeat;
-        background-size: contain;
     }
+
+    &__list-content {
+
+        &::before {
+            font-size: 1.6em;
+            color: $pink-text;
+            content:"❤ ";
+            vertical-align: -.05em;
+        }
+
+    }
+
 
 //------------------------------------------------------------------------------
 //  mods
@@ -56,6 +61,7 @@
     }
     &_FS {
         height: 100%;
+        overflow: hidden;
     }
 
 
