--- a/app/blocks/common.blocks/header/header.scss
+++ b/app/blocks/common.blocks/header/header.scss
@@ -2,5 +2,12 @@
     position: fixed;
     z-index: 100;
     width: 100%;
-    background: white;
+    
+
+    //------------------------------------------------------------------------------
+    //  mods
+    //------------------------------------------------------------------------------
+    &_theme-white {
+        background: white;
+    }
 }
