--- a/app/blocks/common.blocks/photo-block/photo-block.scss
+++ b/app/blocks/common.blocks/photo-block/photo-block.scss
@@ -32,7 +32,7 @@
 //  mobile
 //------------------------------------------------------------------------------
     @include single-col {
-        background-color:  rgb(253, 104, 104);
+        background-color:  rgb(253, 104, 104); //temp
       };
     /* @media (max-height: 800px) {
         background-size: cover;
