--- a/app/blocks/common.blocks/page/page.scss
+++ b/app/blocks/common.blocks/page/page.scss
@@ -4,4 +4,14 @@
     height: 100%;
     background-size: cover;
     overflow: auto;
+
+
+
+    //------------------------------------------------------------------------------
+    //  mobile version
+    //------------------------------------------------------------------------------
+
+    @media (max-width: $base-bp) {
+        // height: auto;
+    }
 }
